--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <title>Login</title>
 </head>
 <body>
-  
+  <div class="Caixa-principal">
+    <div class="Caixa-img">
+      <h1>Welcome Page</h1>
+      <h4>Sign in to your acount</h4>
+      <a href="">www.yoursite.com</a>
+    </div>
+    <div class="Caixa-login">
+      <div class="content">
+        <h1>Login Your Account</h1>
+        <form action="">
+          <label for="email"></label>
+          <input type="text" id="email" name="email"> 
+          <label for="password"></label>
+          <input type="password" id="password" name="password">
+          <input type="checkbox" name="remember" id="remenber"> Remember
+          <a href="">Forgot password?</a>
+          <button class="btn" type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
