Versão 9 - Método get

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <h2>Login</h2>
 
-                <form action="/login" method="get">
+                <form method="get">
                     <div>
                         <input type="text" id="nome" name="nome" value="Username"><br><br>
                     </div>
